@@ -18,6 +18,7 @@
 - fix missing source sss in multi map lookup.
 - fix update_hosts_mounts() return.
 - change lookup to use reinit instead of reopen.
+- update map_hash_table_size description.
 
 21/04/2015 autofs-5.1.1
 =======================
